# learning-driver-preferences

./: .pre-commit-config.yaml  environment.yml  pyproject.toml  readme.md
documentation/: Kopie_van_learning_driver_preferences_task_breakdown.docx
notebooks/: _bootstrap.py  analysis._mmylle.ipynb  analysis.ipynb  define_cutoff_time.ipynb  define_cutoffs.ipynb  difference_between_routes_in_one_day.ipynb  route_and_request_analysis.ipynb
scripts/: annotate_timebuckets.py  config.py  create_location_csv.py  define_cutoffs.py  functions.py  group_locations.py  group_locations_df.py  group_locations_df_v2_helper_func.py  group_locations_helper_functions.py  index_annotate_timebuckets.py  index_files.py  monitor_taskids.py  monitor_taskids_per_folder.py  plot_style.mplstyle  route_and_request_analysis.py
src/learning_driver_preferences/: paths.py  plot_style.py
