[project]
name = "learning-driver-preferences"        # distribution name (can have hyphens)
version = "0.1.0"
requires-python = ">=3.9"
description = "Your routing analysis utilities."
readme = "README.md"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
